packages/fuel-indexer-graphql-lib/tests/snapshots/spec__sdl-2.snap
---
source: packages/fuel-indexer-graphql-lib/tests/spec.rs
expression: text
---
type Block implements Node {
  id: ID!
  number: Int!
  hash: String!
}

interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String
  endCursor: String
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]!
}

type Transaction implements Node {
  id: ID!
  index: Int!
  hash: String!
}

schema {
  query: Query
}

